# better-homomorphic-sine-evaluation

./: CMakeLists.txt  find_polynomial.cpp  readme.md
